--- a/Simulator/.gitignore
+++ b/Simulator/.gitignore
@@ -190,6 +190,7 @@ internal/
 .settings
 **/.vs
 **/.vscode/*
+!**/.vscode/launch.json
 !**/.vscode/tasks.json
 !**/.vscode/settings.template.json
 !**/.vscode/launch.template.json
