--- a/Simulator/package.json
+++ b/Simulator/package.json
@@ -2,11 +2,14 @@
     "name": "srdevice",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://sandeepzgk.github.io/SR-System",
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "dependencies": {
         "@testing-library/jest-dom": "^5.17.0",
@@ -44,6 +47,7 @@
     "devDependencies": {
         "@tailwindcss/postcss": "^4.1.4",
         "autoprefixer": "^10.4.21",
+        "gh-pages": "^6.3.0",
         "postcss": "^8.5.3",
         "tailwindcss": "^3.3.3"
     }
